--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/prismjs": "^1.26.1",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.28.0",
@@ -30,6 +31,10 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"marked": "^9.0.3"
+		"jsdom": "^22.1.0",
+		"marked": "^9.0.3",
+		"prismjs": "^1.29.0",
+		"unist-util-visit": "^5.0.0",
+		"zepto": "^1.2.0"
 	}
 }
